[package]
name = "thorny_garden"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.209"
serde_json = "1.0.128"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache"] }
tokio = {version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
